# lean_agent

./: .env.example  .gitignore  Dockerfile  README.md  build_docker_container.bash  docker_name  pyproject.toml  run.py  run_eval.py
docker/: Dockerfile
nix-utils/: flake.nix
sample_logs/: 2025-05-13T10-49-34+00-00_evaluate-lean-fixing_Hnso4pJhLwsvi6S3pQd5sv.eval
